--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
 
             .nav-links.nav-active {
                 display: flex;
+                z-index: 10000;
             }
 
             .burger {
