--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><button class="submit-btn" style="background-color: #ddd;color: #000000;"><a href=""
-                        download="hero-contactUs.png" style="text-decoration: none; color: inherit;">Download
+                        download="Raj-resume.pdf" style="text-decoration: none; color: inherit;">Download
                         CV</a></button></li>
         </ul>
         <div class="burger" id="burger" onclick="toggleNav()">
